[gd_scene load_steps=4 format=3 uid="uid://settings_popup"]

[ext_resource type="Script" path="res://scripts/settings_popup.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://dhtvghbksvbbs" path="res://assets/UI/panel_bg.svg" id="2_panel"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_popup"]
texture = ExtResource("2_panel")
texture_margin_left = 48.0
texture_margin_top = 48.0
texture_margin_right = 48.0
texture_margin_bottom = 48.0
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 24.0

[node name="SettingsPopup" type="PopupPanel"]
title = "Settings"
theme_override_styles/panel = SubResource("StyleBoxTexture_popup")
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 12.0
offset_right = 216.0
offset_bottom = 200.0
custom_minimum_size = Vector2(200, 0)
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.15, 0.1, 1)
theme_override_font_sizes/font_size = 16
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Save Game"

[node name="ResetButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Save (New Game)"

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.3, 1)
text = "Version 1"
horizontal_alignment = 1

[node name="CreditsButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"
